added old stuff to new repo

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,112 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+
+.mainBox {
+  /* border: 1px solid black; */
+
+  height: 950px;
+  width: 95%;
+  margin: auto;
+  background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
+  opacity: .7;
+  padding-top: 35px;
+  /* margin-top: 15px; */
+  position: relative;
+
+
+}
+
+.cardTable {
+  /* border: 1px solid black; */
+
+  height: 96%;
+  width: 96%;
+  margin: auto;
+  /* margin-top: 50px; */
+  /* margin: 20px; */
+  /* padding: 30px; */
+  background: blanchedalmond;
+  z-index: 10;
+  position: relative;
+  top: 0px; left: 0px;
+  display: flex;
+  background: #ffebcd3d;
+  overflow-y: scroll;
+}
+
+.myCards {
+   z-index: 1000;
+   height: 100%;
+   width: 100%;
+   border: 1px solid rgba(255, 255, 0, 0.185);
+   position: relative;
+
+}
+img{
+  height: 350px;
+  /* width: 200px;
+  margin: 10px; */
+  opacity: .7;
+}
+/* .card-img {
+} */
+
+#titles{
+  font-family: 'Didact Gothic', sans-serif;
+  letter-spacing: 3px;
+  margin-bottom: 0px;
+    margin-right: 0px;
+  /* font-size: 40px; */
+  /* position: absolute; */
+  /* float: right; */
+  /* text-align: center; */
+  /* top: 17px; left: 1100px; */
+  text-align: center;
+  font-size: 43px;
+  margin-top: 133px;
+  font-weight: 900;
+  color: white;
+  background-color: #12131478;
+  /* margin-right: 50%; */
+}
+
+h1{
+  margin-top: 100px;
+}
+
+
+
+#contact{
+  font-size: 12.5px;
+  letter-spacing: 2px;
+  top: 25px;
+  margin-top: 18px;
+  margin-right: 50px;  font-family: 'Didact Gothic', sans-serif;
+
+}
+ul{
+  list-style-type: none;
+  padding: 5%;
+  padding-top: 30px;
+
+}
+
+li{
+  margin-bottom: 23px;
+
+}
+
+button {
+  text-align: center;
+}
+
+.view {
+  font-size: 28px;
+  font-weight: bolder;
+  /* color: white; */
+  /* text-shadow: brown;; */
+  height: 30px;
+  /* background-color: turquoise; */
+}
