--- a/src/index.css
+++ b/src/index.css
@@ -32,11 +32,12 @@ code {
   /* border: 1px solid black; */
 
   height: 96%;
-  width: 65%;
+  width: 45%;
   top: 50px;
   float: left;
   margin: auto;
   margin-top: 50px;
+  margin-left: 50px;
   /* margin: 20px; */
   /* padding: 30px; */
   background: blanchedalmond;
@@ -44,14 +45,14 @@ code {
   position: relative;
   top: 0px; left: 0px;
   display: flex;
-  background: #ffebcd3d;
+  background: #ffebcd2b;
   overflow-y: scroll;
 }
 .cardTable2 {
   /* border: 1px solid black; */
 
   height: 96%;
-  width: 30%;
+  width: 39%;
   top: 50px;
   /* float: right; */
   margin: auto;
@@ -67,17 +68,24 @@ code {
   /* overflow-y: scroll; */
 }
 .profilePic{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 75%;
+
   border-radius: 20px;
-  width: 100%;
+  /* width: 100%; */
+  top: 0px;
   /* border-radius: 50%; */
   position: relative;
-  float: right;
+  /* float: right; */
+  border: 4px solid whitesmoke;
 }
 .myCards {
    z-index: 1000;
    height: 100%;
    width: 99%;
-   border: 1px solid rgba(255, 255, 0, 0.185);
+   /* border: 1px solid rgba(255, 255, 0, 0.185); */
    /* position: absolute; */
    float: right;
 
@@ -97,6 +105,9 @@ img{
 
 p{
   margin-bottom: 0px;
+  font-size: 20px;
+  font-weight: 400;
+  color: whitesmoke;
 }
 
 #titles{
@@ -121,8 +132,14 @@ p{
 h1{
   margin-top: 100px;
 }
-
-
+h3{
+  margin-right: 60px;
+  margin-left: 60px;
+}
+h4{
+color: whitesmoke;
+text-decoration-line: underline;
+}
 
 #contact{
   font-size: 12.5px;
@@ -143,6 +160,8 @@ ul{
 
 li{
   margin-bottom: 23px;
+  /* margin-right: 100px;
+  margin-left: 100px; */
 
 
 }
@@ -166,4 +185,6 @@ button {
   z-index: 500;
   width: 100%;
   opacity: .7;
+  justify-content: none;
+
 }
