--- a/src/index.css
+++ b/src/index.css
@@ -104,9 +104,9 @@ code {
 
 }
 img{
-  height: 350px;
+  /* height: 350px;
   width: 50%;
-  border-radius: 20px;
+  border-radius: 20px; */
 
   /* width: 200px;
   margin: 10px; */
@@ -207,10 +207,26 @@ button {
 }
 
 .projectBox{
-  border: 2px solid black;
+  /* border: 2px solid black; */
   width: 100%;
-  height: 800px;
-  display: block;
+  /* height: 800px; */
+  display: flex;
+  background-color: #383d41;
+  text-align: center;
+
+}
+.innerProjectBox{
+  /* height: 80%; */
+  width: 100%;
+  /* border: 2px solid gray; */
+  display: flex;
+  /* vertical-align: middle; */
+  margin-top: 2%;
+  margin-bottom: 5%;
+  /* flex-flow: row; */
+  justify-content: space-around;
+  align-items: flex-start;
+
 }
 
 .intro{
@@ -278,4 +294,12 @@ html {
 		scroll-behavior: auto;
 	}
 }
+
+.projectCard{
+  height: 20%;
+  width: 34%;
+  border: 2px solid black;
+  align-self: auto;
+}
+
 
