--- a/src/index.css
+++ b/src/index.css
@@ -211,7 +211,7 @@ button {
   width: 100%;
   /* height: 800px; */
   display: flex;
-  background-color: #383d41;
+  background-color: #f0f0f0;
   text-align: center;
 
 }
