--- a/src/index.css
+++ b/src/index.css
@@ -230,7 +230,7 @@ button {
 }
 
 .intro{
-  border: 2px solid black;
+  /* border: 2px solid black; */
   width: 100%;
   height: 40%;
   display: block;
@@ -303,3 +303,6 @@ html {
 }
 
 
+/* .clientImg{
+  left: -110px;
+} */
