--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   width: 100%;
-  /* height: 80%; */
-}
+  }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
@@ -356,4 +355,14 @@ ul.list-group{
 }
 li.list-group-item{
   padding-left: 5%;
+}
+
+/* div#bazinga3.jumbotron{
+  margin-bottom: 20px;
+} */
+
+footer{
+  width: auto;
+  height: 80px;
+  background-color: #101e46 ;
 }
