change jumbotron padding top

--- a/src/index.css
+++ b/src/index.css
@@ -357,9 +357,9 @@ li.list-group-item{
   padding-left: 5%;
 }
 
-/* div#bazinga3.jumbotron{
-  margin-bottom: 20px;
-} */
+div.jumbotron{
+  padding-top: 10px;
+}
 
 footer{
   width: auto;
