--- a/src/index.css
+++ b/src/index.css
@@ -118,7 +118,7 @@ p{
   margin-bottom: 0px;
   font-size: 20px;
   font-weight: 400;
-  color: wheat;
+  color: white;
 }
 
 #titles{
@@ -236,7 +236,7 @@ button {
 }
 
 .introOne{
-  color: wheat;
+  color: white;
 
 }
 
@@ -244,6 +244,26 @@ button {
   color: #ff5718;
   font-weight: 600;
 
+}
+.introAbout{
+  color: white;
+  padding: 5px;
+
+
+
+}
+.introAbout2{
+  color: white;
+  font-size: 12px;
+  width: 50%;
+ 
+
+}
+.intro-p-width{
+  width: 39%;
+  text-align: center;
+  margin: auto;
+  line-height: 1.2em;
 }
 .myName{
   border: 2px solid black;
@@ -314,15 +334,7 @@ html {
   margin: auto;
   
 }
-@media only screen and (max-width: 767px) {
-  .mr-auto {
-    height: 200px;
-  }
-  .about{
-    width: 100%;
-  }
-  
-}
+
 
 .box2{
   /* border: 2px solid black; */
@@ -358,11 +370,48 @@ li.list-group-item{
 }
 
 div.jumbotron{
-  padding-top: 0px;
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-bottom: 10%;
 }
 
 footer{
   width: auto;
   height: 80px;
   background-color: #101e46 ;
+}
+section.black{
+  height: 145px;
+  width: 100%;
+  background-color: black;
+  z-index: 10000;
+  padding: 18px;
+
+}
+img.media-object{
+  border-radius: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-top: 34px;
+  margin-bottom: 2%;
+  width: 30%;
+}
+@media only screen and (max-width: 767px) {
+  .mr-auto {
+    height: 200px;
+  }
+  .about{
+    width: 100%;
+  }
+  .intro-p-width{
+    width: 100%;
+  }
+  section.black{
+    height: 170px;
+    width: 100%;
+    background-color: black;
+    z-index: 10000;
+    padding: 18px;
+
+  }
+  
 }
