--- a/src/index.css
+++ b/src/index.css
@@ -390,8 +390,8 @@ div.jumbotron{
 
 footer{
   width: auto;
-  height: 80px;
-  background-color: #101e46 ;
+  height: 100px;
+  background-color: darkslategrey ;
 }
 section.black{
   height: auto;
@@ -412,6 +412,11 @@ img.media-object{
 
 .bold{
   font-weight: bold;
+}
+svg{
+  margin: 10px;
+  margin-top: 15px;
+  margin-bottom: 30px;
 }
 
 @media only screen and (max-width: 789px) {
